--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<head>
     
+    <navbar>
+        Sarvarbekka
+    </navbar>
+
+    <header>
+        Ramil
+    </header>
+
+</head>
+
+<div class="model">
+    Abdurahmon
+</div>
+
+<div class="sedan">
+    Shamsiddin
+</div>
+
+<div class="view">
+    Gulsanam 
+</div>
+
 </body>
 </html>
